<resources>
    <string name="app_name">轻单儿</string>

    <string name="app_name_english">EasyList</string>
    <!--    Activity Labels-->
    <string name="add_event">新增事件</string>
    <string name="view_history">查看历史</string>
    <string name="view_yesterday">查看昨日</string>
    <string name="guide">向导</string>
    <string name="individual_center">个人中心</string>
    <string name="login_and_register">登陆/注册</string>
    <string name="login">登陆</string>
    <string name="about_easylist">关于轻单儿</string>
    <string name="easylist_born">轻单儿诞生</string>
    <string name="common_setting">通用设置</string>
    <string name="feedback">用户反馈</string>
    <!--  @对应的Unicode字符集  -->
    <string name="sinaName">\u0040轻单儿</string>
    <string name="again_back">再按一次，离开轻单儿</string>

    <string name="launcher">Launcher启动</string>
    <string name="main_today">首页_1_今日</string>
    <string name="main_stats">首页_2_统计</string>
    <string name="main_ic">首页_3_个人</string>
    <string name="add_event_today">新增事件_今日</string>
    <string name="add_event_yesterday">新增事件_昨日</string>

    <string name="share_title">一起来用轻单儿</string>
    <string name="share_text">我正在使用轻单儿记录时间清单，加入轻单儿一起和时间做朋友吧！</string>

    <string name="guide_1">
        随着年龄的增大\n\n你是不是感觉时间过得越来越快\n\n
        你会不会由此变得非常焦虑\n\n你是不是有拖延症
    </string>
    <string name="guide_2">
        拖延的人并非不做事\n\n他们做事\n\n甚至做很多事\n\n
        拖延的人并非不努力\n\n他们会花很长时间去做事\n\n但做的都是简单的事
    </string>
    <string name="guide_3">
        你的时间花在哪里\n\n是看得见的\n\n
        让我们\n\n一起利用\n\n时间轻（清）单儿\n\n和时间做朋友吧
    </string>
    <string name="easylist_born_word_1">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        所有的人，连亚历山大·亚历山德罗维奇·柳比歇夫亲近的人在内，
        谁都没有想到他留下的遗产有多大。
        他生前发表了七十来部学术著作。
        其中有分散分析、生物分类学、昆虫学方面的经典著作；
        这些著作在国外广为翻译。各种各样的论文和专著，
        他一共写了五百多印张。五百印张，等于一万二千五百张打字稿。
        即时以专业作家而论，这也是个庞大的数字。
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;......
    </string>
    <string name="easylist_born_word_2">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        柳比歇夫的遗产包括几个部分：有著作，探讨地蚤的分类、科学史、
        农业、遗传学、植物保护、哲学、昆虫学、动物学、进化论、无神论。
        此外，他还写过回忆录，追忆许多科学家，谈到他一生的各个阶段以及彼尔姆大学......
    </string>
    <string name="easylist_born_word_3">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        在所谓的业余时间，作为“休息”，他研究地蚤的分类。
        单单这一项，工作量就颇为可观：到一九五五年，柳比歇夫已搜集了三十五箱地蚤标本，共一万三千只。
        其中五千只公地蚤做了器官切片，总计三百种。这些地蚤都要鉴定、测量、做切片、制作标本。
        他收集的材料比动物研究所多五倍......
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;......
    </string>
    <string name="easylist_born_word_4">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        看了上面这些文字，你有没有惊呆？反正我第一次看到这些是彻底惊呆了。
        世间竟然还有如此精力充沛之人，有些人在某一方面做的比较出众就已经很了不起了，
        可柳比歇夫竟然在这么多的领域都超越了常人。这种大师的境界，
        真可谓“仰之弥高， 钻之弥坚”。
        柳比歇夫究竟为何能做到如此成就呢？在《奇特的一生》中，
        作者格拉宁通过对柳比歇夫的文档进行研究，发现柳比歇夫独创了一套适合自己的生活方法：
        基于事件--时间的统计法。他把自己每天做的事情都按照起止时间和做了什么事情记录下来，
        只记录事件本身，不添加任何感受。然后利用统计学的知识对时间进行统计、分析：
        每天一小结，每月一大结，年终一总结。
        格拉宁说他相信柳比歇夫的成就和他这种生活方式分不开，
        柳比歇夫利用这种方式形成了一种特殊的时间感，借助于一种内在的注意力，他感觉得到时间的流逝。
    </string>
    <string name="easylist_born_word_5">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        在得知了柳比歇夫的这种生活方法后，
        我就在想我们也应该向他学习这种生活方式，把每天的生活按照事件--时间日志记录下来，
        然后隔一段时间进行分析总结。很多人都有手机记账的习惯，
        我认为这确实是一个不错的习惯，通过记账可以养成我们合理的消费观和金钱观。
        但是可能大家对记录时间却不很认同，但我却认为记录时间尤其必要，
        因为金钱没了，浪费了，还可以再赚，但是时间没了，
        那可是再也回不来了啊。于是，轻单儿APP就此诞生了。
    </string>
    <string name="easylist_born_word_6">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        这种基于过程的生活记录，每月，每年下来，自己都可以知道自己做了什么。
        而且每当做一件事结果不好的时候，更容易找到缘由。
        我们随着年龄的增大会感觉时间过得越来越快，由此会变得比较焦虑。
        当我们以这种方式记录下来生活的时候，会使我们对时间的感觉越来越精确，
        调整我们对时间的感觉，在估算任何任务的工作量的时候，都更容易确定“真正现实可行的目标”。
        此外，相对准确的估算又使得目标基本上都可以达成，由此可以帮助我们“战胜焦虑”。
    </string>
    <string name="easylist_born_word_7">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        让我们一起利用时间轻（清）单儿，和时间做朋友吧！
    </string>

    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>
</resources>
