<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.tryking.EasyList.activity.about_easylist.EasyListBornActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:layout_scrollFlags="scroll|enterAlways" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingTop="32dp"
        android:text="轻单儿"
        android:textColor="@color/colorAccent"
        android:textSize="32dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/common_color_accent_frame"
                android:gravity="center"
                android:padding="5dp"
                android:text="和时间做朋友"
                android:textColor="@color/colorAccent"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/common_color_accent_frame"
                android:lineSpacingMultiplier="1.5"
                android:padding="10dp"
                android:text="@string/easylist_born_word_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/common_color_accent_frame"
                android:lineSpacingMultiplier="1.5"
                android:padding="10dp"
                android:text="@string/easylist_born_word_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/common_color_accent_frame"
                android:lineSpacingMultiplier="1.5"
                android:padding="10dp"
                android:text="@string/easylist_born_word_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/common_color_accent_frame"
                android:lineSpacingMultiplier="1.5"
                android:padding="10dp"
                android:text="@string/easylist_born_word_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/common_color_accent_frame"
                android:lineSpacingMultiplier="1.5"
                android:padding="10dp"
                android:text="@string/easylist_born_word_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/common_color_accent_frame"
                android:lineSpacingMultiplier="1.5"
                android:padding="10dp"
                android:text="@string/easylist_born_word_6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/common_color_accent_frame"
                android:lineSpacingMultiplier="1.5"
                android:padding="10dp"
                android:text="@string/easylist_born_word_7" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
